ClimateExplorer.Web.Client/Pages/Index.razor.css
.map-space-reserver {
    position: relative;
}

.chart-series-list-wrapper {
    /* To compensate for the unwanted 10px vertical gutter after the last row of series lozenges */
    margin-bottom: -10px;
}

@media only screen and (max-width: 1024px) {
    .map-space-reserver {
        margin-bottom: 10px;
        z-index: 1;
        height: 250px;
        width: 100%;
    }
}

@media only screen and (min-width: 1025px) {
    .map-space-reserver {
        z-index: 1;
        position: absolute;
        bottom: 0;
        top: 0;
        right: 0;
        left: 800px;
    }

    .location-and-chart-container {
        flex-direction: column;
    }

    .location-info-container {
        /* On larger screens, make room for the map to appear to the right of the location info section */
        margin-top: 0px;
    }
}

